# flubber

./: .editorconfig  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
daemon/: Cargo.toml
daemon/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  front.md  protocol.md
flubber-irc/: Cargo.toml
flubber-irc/src/: errors.rs  main.rs
flubber-server/: Cargo.toml
flubber-server/src/: main.rs
gui/: Cargo.toml
irc_plugin/: Cargo.toml
irc_plugin/src/: main.rs
proto/: client.proto  common.proto  plugin.proto
src/: buffer.rs  build.rs  client.rs  config.rs  conn.rs  daemon.rs  errors.rs  lib.rs  message.rs  plugin.rs  plugins.rs  proto.rs  select.rs
src/proto/: client.rs  mod.rs  plugin.rs
tui/: Cargo.toml
tui/src/: client.rs  gui.rs  main.rs
tui/src/ui/: buffer.rs  mod.rs  util.rs
