[package]
name = "flubber"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[workspace]
members = [".", "daemon", "irc_plugin"]

[dependencies]
backtrace = "0.3"
bytes = "0.4"
derive_more = "0.14"
futures = "0.1"
serde = "1.0"
serde_cbor = "0.9"
serde_derive = "1.0"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-process = "0.2"
tower-service = "0.2"

serde_json = { version = "1.0", optional = true }

[features]
default = ["json"]
json = ["serde_json"]
