[package]
name = "flubber"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"
build = "src/build.rs"

[workspace]
members = [".", "daemon", "irc_plugin"]

[dependencies]
backtrace = "0.3"
bytes = "0.4"
derive_more = "0.14"
futures = "0.1"
prost = "0.4"
prost-derive = "0.4"
serde = "1.0"
serde_derive = "1.0"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-process = "0.2"
tower-service = "0.2"

serde_json = { version = "1.0", optional = true }

[build-dependencies]
prost-build = "0.4"

[features]
default = ["json"]
json = ["serde_json"]
